# Top-level Makefile.am

SUBDIRS = src


# Files to remove with 'make distclean'
DISTCLEANFILES =
distclean-local:
	-rm -rf Makefile.in \
					aclocal.m4\
					ar-lib\
					autom4te.cache\
					compile\
					config.guess\
					config.h.in\
					config.h.in~\
					config.sub\
					configure\
					configure.ac~\
					configure~\
					depcomp\
					install-sh\
					ltmain.sh\
					missing\
					src/Makefile.in\
					src/.deps
